--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
+<!--Redirect to the home page-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/templates/index.html">
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=/home/home.html">
+    <title>index</title>
     <script type="text/javascript">
         // Fallback in case the meta tag doesn't work
-        setTimeout(function() {
-            window.location.href = '/templates/index.html';
+        setTimeout(function () {
+            window.location.href = '/home/home.html';
         }, 0);
     </script>
 </head>
+
 <body>
-    <p>If you are not redirected automatically, follow this <a href="/templates/index.html">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="/home/home.html">link</a>.</p>
 </body>
+
 </html>
