Fixed screen adjust

--- a/index.html
+++ b/index.html
@@ -58,24 +58,25 @@
                 </p>
                 <div class="columned-text">
                     <p class="about-text">
-                        My programming experience includes:<br>
-                        <ul>
+                        <div>
+                            My programming experience includes:<br>
                             <li>Python</li>
                             <li>C++</li>
                             <li>SQL</li>
-                        </ul>
+                        </div>
                     </p>
                     <p class="about-text">
-                        My software experience includes:<br>
-                        <ul>
+                        <div>
+                            My software experience includes:<br>
                             <li>Docker</li>
                             <li>VS Code</li>
                             <li>Linux</li>
-                        </ul>
+                        </div>
                     </p>
                 </div>
+                <h1 class="title">My projects:</h1>
                 <div class="project">
-                    <h2 class="project-title">Machine Learning Neural Net</h2>
+                    <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
                     <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
                 </div>
             </div>
