lengthed about-me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,23 @@
             <div class="about">
                 <h1 class="about-title">Hello! I am Grant Gibson</h1>
                 <p class="about-text">
-                    I am a passionate <strong class="highlight-cs">Computer Science</strong> student at <strong class="highlight-fsu">Florida State University.</strong>
+                    I am a passionate <strong class="highlight-cs">Computer Science</strong> student at 
+                    <strong class="highlight-fsu">Florida State University</strong>, on track to graduate 
+                    with my B.S. in 2025. I plan to continue pursuing my M.S. in Computer Science at FSU, 
+                    focusing on advancing my expertise in the field. My primary interest lies in 
+                    <strong class="highlight-ds">Data Science</strong>, and I am deeply fascinated by the 
+                    processes of collecting, analyzing, and modeling data to uncover insights and drive 
+                    informed decisions. Specific areas of interest include data preprocessing, feature 
+                    engineering, and developing predictive models to address real-world challenges. 
+                </p> 
+                <p class="about-text"> 
+                    Beyond academics, I am eager to gain hands-on industry experience through internships 
+                    or research opportunities. My goal is to contribute to innovative projects alongside 
+                    experienced professionals, where I can learn and make a meaningful impact. Additionally, 
+                    I am highly interested in exploring research opportunities, aiming to assist in 
+                    developing cutting-edge ideas in the field of data science. These experiences will help 
+                    lay the groundwork for my master's thesis and future independent research.<br> Feel free 
+                    to contact me to discuss potential projects, internships, or research collaborations. 
                 </p>
                 <div class="columned-text">
                     <p class="about-text">
