Added job section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
                     <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
                     <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
                 </div>
+                <h1 class="title">Work Experience</h1>
+                <div class="job">
+                    <a class="job-title">Technology Assist</a>
+                    <a class="job-location">Allergy and Asthma Diagnostic Treatment Center | Tallahassee, Fl</a>
+                    <p class="job-description">
+                        Installing and managing software like operating systems, word, and other programs on company computers. Must know how to use any computer from very old macs to newer windows computers. Additionally, I have to solve and troubleshoot software problems like USB device errors or network issues.<br>
+                        Manage and organize company files and databases to maintain accurate and accessible information. Information like doctor’s names and hospitals may be added and requested from it daily. Information is also used to create physical tabs to mail charts and info to relevant doctors.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
