Formatted job description

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
                 </div>
                 <h1 class="title">Work Experience</h1>
                 <div class="job">
-                    <a class="job-title">Technology Assist</a>
+                    <a class="job-title">Technology Assist - Current</a>
                     <a class="job-location">Allergy and Asthma Diagnostic Treatment Center | Tallahassee, Fl</a>
                     <p class="job-description">
                         Installing and managing software like operating systems, word, and other programs on company computers. Must know how to use any computer from very old macs to newer windows computers. Additionally, I have to solve and troubleshoot software problems like USB device errors or network issues.<br>
+                    </p>
+                    <p class="job-description">
                         Manage and organize company files and databases to maintain accurate and accessible information. Information like doctor’s names and hospitals may be added and requested from it daily. Information is also used to create physical tabs to mail charts and info to relevant doctors.
                     </p>
                 </div>
