--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                         <li><a href="https://github.com/gjg23" target="_blank">GitHub</a></li>
                     </ul>
                 </li>
-                <li><a href="/CV - Grant Gibson 2025.pdf">CV</a></li>
             </ul>
         </div>
     </nav>
@@ -56,20 +55,19 @@
                 <h1 class="about-title">Hello! I am Grant Gibson</h1>
                 <p class="about-text">
                     I am a <strong class="highlight-cs">Computer Science</strong> student at 
-                    <strong class="highlight-fsu">Florida State University</strong>, on track to graduate 
-                    with my B.S. in 2025. I plan to continue pursuing my M.S. in Computer Science at FSU.
-                    My primary interest lies in <strong class="highlight-ds">Data Science</strong>, and I am curious about
-                    processes of collecting, analyzing, and modeling data to uncover insights and drive 
-                    informed decisions. 
+                    <strong class="highlight-fsu">Florida State University</strong>, on track to earn my Master's degree 
+                    by August 2026. My core interests include 
+                    <strong class="highlight-ds">Data Science</strong>, 
+                    <strong class="highlight-ds">Cybersecurity</strong>, and 
+                    <strong class="highlight-ds">DevOps</strong>. I enjoy managing my own home lab, running my own tools 
+                    such as VPNs, cloud solutions, and local AI models. I'm also passionate about exploring 
+                    emerging data science techniques, running experiments, and visualizing performance metrics.
                 </p> 
                 <p class="about-text"> 
-                    Beyond academics, I am eager to gain hands-on industry experience through internships 
-                    or research opportunities. My goal is to contribute to innovative projects alongside 
-                    experienced professionals, where I can learn and make a meaningful impact. Additionally, 
-                    I am interested in exploring research opportunities, aiming to assist in 
-                    developing ideas in the field of computer science. These experiences will help 
-                    lay the groundwork for my master's thesis and future independent research.<br>
-                    Feel free to contact me to discuss potential projects, internships, or research collaborations. 
+                    Outside the classroom, I'm eager to gain hands-on experience through internships or research positions. 
+                    My goal is to contribute to impactful and forward-thinking projects while continuing to grow 
+                    professionally. I'm particularly enthusiastic about collaborative research in computer science, 
+                    where I can help develop innovative solutions and deepen my technical expertise.
                 </p>
                 <div class="columned-text">
                     <p class="about-text">
@@ -83,8 +81,8 @@
                     <p class="about-text">
                         <div>
                             My software experience includes:<br>
-                            <li>Docker</li>
-                            <li>VS Code</li>
+                            <li>Proxmox</li>
+                            <li>Git</li>
                             <li>Linux</li>
                         </div>
                     </p>
@@ -94,15 +92,28 @@
                     <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
                     <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
                 </div>
-                <h1 class="title">Work Experience</h1>
+                <h1 class="title">Work Experience:</h1>
                 <div class="job">
-                    <a class="job-title">Technology Assist - Current</a>
-                    <a class="job-location">Allergy and Asthma Diagnostic Treatment Center | Tallahassee, Fl</a>
+                    <div class="job-header">
+                        <img class="job-logo" src="/media/allergy_logo.png" alt="Company Logo" />
+                        <a class="job-title">Technology Assist</a>
+                        <a class="job-location">Allergy and Asthma Diagnostic Treatment Center | Tallahassee, Fl</a>
+                        <a class="job-location">Jan 2025 - Present</a>
+                    </div>
                     <p class="job-description">
-                        Installing and managing software like operating systems, word, and other programs on company computers. Must know how to use any computer from very old macs to newer windows computers. Additionally, I have to solve and troubleshoot software problems like USB device errors or network issues.<br>
+                        Selected, purchased, and installed computers, printers, scanners, and diagnostic equipment to ensure reliable and current technology for daily use.
                     </p>
                     <p class="job-description">
-                        Manage and organize company files and databases to maintain accurate and accessible information. Information like doctor’s names and hospitals may be added and requested from it daily. Information is also used to create physical tabs to mail charts and info to relevant doctors.
+                        Diagnosed inefficiencies in network devices and configurations to improve infrastructure performance and reduce downtime.
+                    </p>
+                    <p class="job-description">
+                        Assisted users with technical issues and program questions to maintain productivity and minimize disruptions.
+                    </p>
+                    <p class="job-description">
+                        Investigated and resolved patient software problems to support smooth healthcare operations.
+                    </p>
+                    <p class="job-description">
+                        Maintained an up-to-date newsletter mailing list to ensure accurate and efficient communication.
                     </p>
                 </div>
             </div>
