--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grant Gibson</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/media/IMG_2840.png">
 </head>
 
 <body>
@@ -52,16 +53,14 @@
         <!-- Centered content -->
         <section class="article">
             <div class="about">
+                <!-- About me section -->
                 <h1 class="about-title">Hello! I am Grant Gibson</h1>
                 <p class="about-text">
-                    I am a <strong class="highlight-cs">Computer Science</strong> student at 
-                    <strong class="highlight-fsu">Florida State University</strong>, on track to earn my Master's degree 
-                    by August 2026. My core interests include 
-                    <strong class="highlight-ds">Data Science</strong>, 
-                    <strong class="highlight-ds">Cybersecurity</strong>, and 
-                    <strong class="highlight-ds">DevOps</strong>. I enjoy managing my own home lab, running my own tools 
-                    such as VPNs, cloud solutions, and local AI models. I'm also passionate about exploring 
-                    emerging data science techniques, running experiments, and visualizing performance metrics.
+                    I am a Computer Science student at Florida State University, on track to earn my Master's degree 
+                    by August 2026. My core interests include Data Science, IT Systems, and Security. I enjoy managing 
+                    my own home lab, running my own tools such as VPNs, cloud solutions, and local AI models. I'm also 
+                    passionate about applying data science techniques to a variety of applications like finance and
+                    bioinformatics, and automating this.
                 </p> 
                 <p class="about-text"> 
                     Outside the classroom, I'm eager to gain hands-on experience through internships or research positions. 
@@ -69,24 +68,41 @@
                     professionally. I'm particularly enthusiastic about collaborative research in computer science, 
                     where I can help develop innovative solutions and deepen my technical expertise.
                 </p>
+
+                <!-- Skills section -->
                 <div class="columned-text">
                     <p class="about-text">
+                        My skills include:<br>
                         <div>
-                            My programming experience includes:<br>
                             <li>Python</li>
-                            <li>C++</li>
-                            <li>SQL</li>
+                            <li>C / C++</li>
+                            <li>Git</li>
                         </div>
                     </p>
                     <p class="about-text">
                         <div>
-                            My software experience includes:<br>
-                            <li>Proxmox</li>
-                            <li>Git</li>
-                            <li>Linux</li>
+                            <li>HTML</li>
+                            <li>JS</li>
+                            <li>CSS</li>
+                        </div>
+                    </p>
+                    <p class="about-text">
+                        <div>
+                            <li>SQL</li>
+                            <li>Tensorflow / Pytorch</li>
+                            <li>Scikit-learn</li>
+                        </div>
+                    </p>
+                    <p class="about-text">
+                        <div>
+                            <li>Pandas / Numpy</li>
+                            <li>Linux / Bash</li>
+                            <li>Docker</li>
                         </div>
                     </p>
                 </div>
+
+                <!-- Projects section -->
                 <h1 class="title">My projects:</h1>
                 <div class="project">
                     <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
