changes style to be more blue

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                     <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
                     <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
                 </div>
+                <div class="project">
+                    <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
+                    <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
+                </div>
+
+                <!-- Work experience section -->
                 <h1 class="title">Work Experience:</h1>
                 <div class="job">
                     <div class="job-header">
