fixes skills section format for mobile scale

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
                 <div class="profile-contacts">
                     <a href="mailto:gjgibson118@gmail.com" target="_blank">
-                        <img src="/media/112-gmail_email_mail-512.png" alt="Email Logo">
+                        <img src="/media/112-gmail_email_mail-512.png" alt="Email profile link">
                     </a>
                     <a href="https://github.com/gjg23" target="_blank">
-                        <img src="/media/github-logo-png_seeklogo-273183.png" alt="GitHub Logo">
+                        <img src="/media/github-logo-png_seeklogo-273183.png" alt="GitHub profile link">
                     </a>
                     <a href="https://www.linkedin.com/in/grant-gibson-7648022a4" target="_blank">
-                        <img src="/media/circle-linkedin-512.png" alt="LinkedIn Logo">
+                        <img src="/media/circle-linkedin-512.png" alt="LinkedIn profile link">
                     </a>
                 </div>
             </div>
@@ -70,47 +70,44 @@
                 </p>
 
                 <!-- Skills section -->
-                <div class="columned-text">
-                    <p class="about-text">
-                        My skills include:<br>
-                        <div>
-                            <li>Python</li>
-                            <li>C / C++</li>
-                            <li>Git</li>
-                        </div>
-                    </p>
-                    <p class="about-text">
-                        <div>
-                            <li>HTML</li>
-                            <li>JS</li>
-                            <li>CSS</li>
-                        </div>
-                    </p>
-                    <p class="about-text">
-                        <div>
-                            <li>SQL</li>
-                            <li>Tensorflow / Pytorch</li>
-                            <li>Scikit-learn</li>
-                        </div>
-                    </p>
-                    <p class="about-text">
-                        <div>
-                            <li>Pandas / Numpy</li>
-                            <li>Linux / Bash</li>
-                            <li>Docker</li>
-                        </div>
-                    </p>
-                </div>
+                <section class="skills">
+                <h2>My Skills:</h2>
+                <ul class="skills-grid">
+                    <li>Python</li>
+                    <li>C / C++</li>
+                    <li>Java</li>
+                    <li>Git</li>
+                    <li>HTML</li>
+                    <li>JavaScript</li>
+                    <li>CSS</li>
+                    <li>SQL</li>
+                    <li>TensorFlow / PyTorch</li>
+                    <li>Scikit-learn</li>
+                    <li>Pandas / NumPy</li>
+                    <li>Linux / Bash</li>
+                    <li>Docker</li>
+                    <li>Proxmox</li>
+                </ul>
+                </section>
+
 
                 <!-- Projects section -->
                 <h1 class="title">My projects:</h1>
                 <div class="project">
-                    <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
-                    <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
+                    <a href="https://github.com/gjg23/AIPong-Simple" alt="Github link for C++ MLP" target="_blank" class="project-title">C++ Multi-Layer Perceptron (MLP)</a>
+                    <p class="project-description">
+                        After using neural network libraries in Python that were already built for me, I was curious about how the underlying 
+                        code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the 
+                        model. Then I trained the model on the data and allowed it to play the Pong game.
+                    </p>
                 </div>
+
                 <div class="project">
-                    <a href="https://github.com/gjg23/AIPong-Simple" target="_blank" class="project-title">Machine Learning Neural Net</a>
-                    <p class="project-description">After using neural network libraries in Python that were already built for me, I was curious about how the underlying code worked, so I made my own class in C++. I created a basic Pong environment and generated training data for the model. Then I trained the model on the data and allowed it to play the Pong game.</p>
+                    <a href="https://github.com/gjg23/BST" alt="Github link for BST" target="_blank" class="project-title">Binary Search Tree (BST)</a>
+                    <p class="project-description">
+                        This was a class project for Data Structures and Algorithms. It demonstrates concepts of binary trees and includes 
+                        algorithms to insert values, search for values, find the minimum and maximum values, and traverse the tree in order.
+                    </p>
                 </div>
 
                 <!-- Work experience section -->
@@ -118,7 +115,7 @@
                 <div class="job">
                     <div class="job-header">
                         <img class="job-logo" src="/media/allergy_logo.png" alt="Company Logo" />
-                        <a class="job-title">Technology Assist</a>
+                        <a class="job-title">Technology Assistant</a>
                         <a class="job-location">Allergy and Asthma Diagnostic Treatment Center | Tallahassee, Fl</a>
                         <a class="job-location">Jan 2025 - Present</a>
                     </div>
@@ -140,7 +137,7 @@
                 </div>
             </div>
         </section>
-    </main>
+    <main>
 
 </body>
 
