adds page for photos of my cat

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="brand">Grant Gibson</div>
             <ul>
                 <li><a href="/index.html">Home</a></li>
+                <li><a href="/curly.html">My Cat</a></li>
                 <li>
                     <a href="#">Contact</a>
                     <ul class="dropdown">
